analyzer/tests/snapshots/errors__overflow_i8_neg.snap
---
source: analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src_str)"

---
error: literal out of range for `i8`
  ┌─ [snippet]:3:6
  │
3 │   i8(-129)
  │      ^^^^ does not fit into type `i8`


